--- a/src/main/resources/fxml/paper/component/addPaperKind.fxml
+++ b/src/main/resources/fxml/paper/component/addPaperKind.fxml
@@ -3,10 +3,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
+            xmlns:fx="http://javafx.com/fxml" fx:id="container"
             fx:controller="com.hnust.controller.paper.component.AddPaperKindController" style="-fx-background-color: #FFF" prefWidth="500">
     <HBox AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="10" alignment="CENTER">
         <Label text="添加题型" style="-fx-font-size: 1.3em;-fx-font-weight: bold"></Label>
