1. MainController:界面优化:字体大小自适应，添加点击老师头像或名字跳转到对应的界面

--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -7,12 +7,12 @@
 
 .itemFont{
     -fx-cursor: hand;
-    -fx-font-size: 15;
+    -fx-font-size: 1.3em;
     -fx-font-family: SimSun-ExtB;
 }
 
 .headerFont{
-    -fx-font-size: 18;
+    -fx-font-size: 1.6em;
     -fx-font-family: SimSun-ExtB;
 }
 
