--- a/src/main/resources/fxml/main.fxml
+++ b/src/main/resources/fxml/main.fxml
@@ -8,7 +8,7 @@
 
 <?import javafx.scene.effect.DropShadow?>
 <AnchorPane fx:id="mainWindow" prefHeight="700" prefWidth="1040" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="com.hnust.controller.MainController">
-    <!--左边-->
+    <!--左边  -->
     <AnchorPane prefHeight="-Infinity" prefWidth="220" style="-fx-background-color: #3333cc" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0">
         <VBox alignment="CENTER" prefHeight="60" prefWidth="-Infinity" style="-fx-background-color: #3333cc" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
             <Label style="-fx-text-fill: #aab6f6;-fx-font-size: 18px;-fx-font-family: SimSun-ExtB" text="教师管理系统" />
@@ -178,9 +178,9 @@
             </VBox>
         </AnchorPane>
     </AnchorPane>
-    <!--上边-->
-    <AnchorPane prefHeight="70" prefWidth="-Infinity" style="-fx-background-color: #ffffff" AnchorPane.leftAnchor="220" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
-        <HBox alignment="CENTER" AnchorPane.rightAnchor="40" AnchorPane.topAnchor="20">
+    <!--上边 -->
+    <AnchorPane prefHeight="70" AnchorPane.leftAnchor="220" prefWidth="-Infinity" style="-fx-background-color: #ffffff"  AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0">
+        <HBox style="-fx-cursor: hand" onMouseClicked="#shiftToPersonalData" alignment="CENTER" AnchorPane.rightAnchor="40" AnchorPane.topAnchor="20">
             <ImageView fitHeight="30" fitWidth="30" preserveRatio="true">
                 <Image url="@../image/app2.png" />
             </ImageView>
@@ -195,7 +195,7 @@
     <AnchorPane prefHeight="30" AnchorPane.topAnchor="70" AnchorPane.rightAnchor="0" AnchorPane.leftAnchor="220"
     style="-fx-background-color: #ffffff">
         <HBox alignment="CENTER_LEFT" AnchorPane.bottomAnchor="0" AnchorPane.topAnchor="0" AnchorPane.leftAnchor="20">
-            <Label  fx:id="navFont" text="学生管理  /  个人信息管理" style="-fx-font-size: 13px;-fx-text-fill: #828282;-fx-font-family: SimSun-ExtB"/>
+            <Label  fx:id="navFont" text="学生管理  /  个人信息管理" style="-fx-font-size: 1em;-fx-text-fill: #828282;-fx-font-family: SimSun-ExtB"/>
         </HBox>
     </AnchorPane>
     <!--中间-->
