--- a/src/main/resources/fxml/subject/batchImport.fxml
+++ b/src/main/resources/fxml/subject/batchImport.fxml
@@ -4,13 +4,16 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane fx:id="container" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFF;
-            -fx-border-width: 0" xmlns="http://javafx.com/javafx/10.0.2-internal"
-            xmlns:fx="http://javafx.com/fxml/1"
+<AnchorPane fx:id="container" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #FFFFFF;
+            -fx-border-width: 0" xmlns="http://javafx.com/javafx"
+            xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.hnust.controller.subject.BatchImportController">
-    <VBox alignment="BASELINE_LEFT"  prefHeight="178.0" prefWidth="1000.0" spacing="20" style="-fx-background-color: #EBFFFE;
-          -fx-font-size: 1.3em;" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="50" AnchorPane.topAnchor="25.0" fx:id="remind">
-        <Label prefHeight="40.0" text="    导入说明" />
+    <VBox alignment="BASELINE_LEFT" spacing="20" style="-fx-background-color: #EBFFFE;
+          -fx-font-size: 1.2em;" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30" AnchorPane.topAnchor="25.0" fx:id="remind">
+        <padding>
+            <Insets left="10" right="10" top="10" bottom="20"/>
+        </padding>
+        <Label text="    导入说明" />
         <Label text="    1，本系统支持导入的题型" />
         <Label text="    单选题，多选题，不定项选择题，填空题，判断题，问答题，理解题（一个大标题下有多个小问题），排序题，匹配题，完型填空题" />
         <Label text="    2，导入题目的word文档必须按照模板要求来进行填写" />
