--- a/src/main/resources/css/personInfo/PersonData.css
+++ b/src/main/resources/css/personInfo/PersonData.css
@@ -2,6 +2,6 @@
     -fx-padding: 25;
     -fx-font-family: "Arial Black";
     -fx-font-size: 20;
-    -fx-border-color: #000;
+    -fx-border-color: #DDD;
 
 }
