--- a/src/main/resources/fxml/personInfo/personalData.fxml
+++ b/src/main/resources/fxml/personInfo/personalData.fxml
@@ -14,15 +14,15 @@
     </VBox>
 <VBox fx:id="vbox1" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="325.0" prefWidth="78.0" AnchorPane.bottomAnchor="82.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="800.0" AnchorPane.topAnchor="87.0">
     <Label lineSpacing="1.0" style="-fx-padding: 10" text="学 院" />
-    <TextField editable="false" fx:id="collegeName" style="-fx-background-color: CEDEF5" />
+    <TextField fx:id="collegeName" editable="false" style="-fx-background-color: CEDEF5" />
     <Label style="-fx-padding: 10" text="教工号" />
-    <TextField editable="false" fx:id="teacherNumber" style="-fx-background-color: CEDEF5" />
+    <TextField fx:id="teacherNumber" editable="false" style="-fx-background-color: CEDEF5" />
     <Label lineSpacing="1.0" style="-fx-padding: 10" text="姓 名" />
-    <TextField editable="false" fx:id="teacherName" style="-fx-background-color: CEDEF5" />
+    <TextField fx:id="teacherName" editable="false" style="-fx-background-color: CEDEF5" />
     <Label style="-fx-padding: 10" text="手机号" />
-    <TextField editable="false" fx:id="teacherPhone" style="-fx-background-color: CEDEF5" />
+    <TextField fx:id="teacherPhone" editable="false" style="-fx-background-color: CEDEF5" />
     <Label style="-fx-padding: 10" text="邮 箱" />
-    <TextField editable="false" fx:id="teacherMail" style="-fx-background-color: CEDEF5" />
+    <TextField fx:id="teacherMail" editable="false" style="-fx-background-color: CEDEF5" />
 
 </VBox>
     <VBox prefHeight="62.0" prefWidth="210.0" AnchorPane.RightAnchor="250.0" AnchorPane.topAnchor="43.0">
@@ -34,7 +34,7 @@
     </VBox>
    <VBox prefHeight="62.0" prefWidth="210.0" AnchorPane.LeftAnchor="250.0" AnchorPane.topAnchor="480.0">
       <children>
-          <Button prefWidth="120.0" style="-fx-font-size: 1.0em;-fx-arc-height: 20" styleClass="btn,btn-info" text="更新信息" />
+          <Button prefWidth="120.0" style="-fx-font-size: 1.0em;-fx-arc-height: 20" onAction="#EditInfo" styleClass="btn,btn-info" text="修改信息" />
       </children>
    </VBox>
    <VBox prefHeight="62.0" prefWidth="120.0" AnchorPane.rightAnchor="650.0" AnchorPane.topAnchor="125.0">
@@ -48,9 +48,9 @@
         </children>
     </VBox>
     <Button prefHeight="40" prefWidth="180.0" style="-fx-font-size: 1.0em;-fx-arc-height: 30; -fx-background-color: #53C419" styleClass="btn,btn-info" text="➕申请加入课程组" AnchorPane.RightAnchor="250.0" AnchorPane.topAnchor="480.0" />
-   <VBox prefHeight="129.0" prefWidth="120.0" spacing="20" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="166.0">
+   <VBox prefHeight="130.0" prefWidth="97.0" spacing="20" AnchorPane.rightAnchor="0" AnchorPane.topAnchor="166.0">
       <children>
-         <Button styleClass="btn,btn-info" text="查看" />
+         <Button styleClass="btn,btn-info" onAction="#check" text="查看" />
          <Button style="-fx-background-color:#FE0000 " styleClass="btn,btn-info" text="退出" />
       </children>
    </VBox>
